# ai-weave-of-realms

./: .gitignore  AGENTS.md  Cargo.toml  MAP_GENERATION_RULES.md  PLAN.md  TASKS.md  justfile
.claude/: settings.local.json
crates/rpg-engine/: Cargo.toml
crates/rpg-engine/src/: combat.rs  error.rs  game_error.rs  game_state.rs  hero.rs  lib.rs  movement.rs  rng.rs  score.rs  spawn.rs  team.rs  test_utils.rs
crates/rpg-engine/src/map/: chunk.rs  game_map.rs  mod.rs  tile.rs
crates/rpg-godot/: Cargo.toml  build.rs
crates/rpg-godot/src/: build_info.rs  camera_controller.rs  coords.rs  error.rs  game_manager.rs  hero_node.rs  lib.rs  main_scene.rs  main_scene.rs.bak  map_node.rs  score_ui.rs  tile_highlight.rs
crates/rpg-mapgen/: Cargo.toml
crates/rpg-mapgen/src/: chunk_generator.rs  chunk_grid.rs  error.rs  evaluator.rs  lib.rs  map_assembler.rs  map_table.rs  rng_userdata.rs  spawner.rs  stitcher.rs  test_utils.rs  validation_rule_set.rs  validator.rs
crates/rpg-tiled/: Cargo.toml
crates/rpg-tiled/src/: error.rs  exporter.rs  importer.rs  lib.rs
crates/rpg-tools/: Cargo.toml
godot/: .gitignore  project.godot  rpg_godot.gdextension  rpg_godot.gdextension.uid
godot/assets/: chest.svg.import  enemy.png.import  enemy.svg.import  hero.png.import  hero.svg.import  icon.svg.import  owner.svg.import  tileset.png.import
godot/scenes/: main.tscn
scripts/: MAP_GENERATION_RULES.md
scripts/generators/: city_chunk.lua  codex-variant.lua  default.lua  forest.lua  mountain.lua  resources.lua  river.lua  road.lua  terrain.lua  water.lua
scripts/rules/: 01_passable_terrain.lua  02_impassable_limit.lua  03_city_rules.lua  04_chunk_edge_alignment.lua  evaluate.lua  spawn_enemies.lua  validate.lua
tdeck/: Cargo.toml  README.md
tdeck/.cargo/: config.toml
tdeck/assets/tiles/: README.md
tdeck/src/: app.rs  input.rs  main.rs  render.rs  session.rs  storage.rs  system_info.rs
tdeck/src/screens/: map_select.rs  map_view.rs  mod.rs  splash.rs
tileset/: tileset.tsx
