[package]
name = "rpg-engine"
version = "0.1.0"
edition = "2021"
description = "Core game logic: PRNG, map types, hero, combat, score. Zero Godot dependencies."

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
